# armor_auto_aim

./: .gitignore  BUG  CMakeLists.txt  ChangeLog  Doxyfile  README  TODO  auto_aim.service  run  set_auto_aim_service
config/: config.yaml  hero.yaml  infantry.yaml  sentry_left.yaml
config/old/: config.yaml
config/view/: ekf_view.json
src/: main.cpp
src/HikDriver/: CMakeLists.txt  README.md
src/HikDriver/include/HikDriver/: HikDebugUi.h  HikDriver.h  HikFrame.hpp  HikReadThread.h  HikUi.h
src/HikDriver/src/: HikDriver.cpp  HikReadThread.cpp
src/armor_auto_aim/: CMakeLists.txt
src/armor_auto_aim/include/armor_auto_aim/: armoar_auto_aim.h  armor_auto_aim.h  serail.h  serail_work.h  view.h  view_work.h
src/armor_auto_aim/src/: armor_auto_aim.cpp  armor_auto_aim.h.cpp  serial.cpp  serial_work.cpp  view.cpp  view_work.cpp
src/armor_detector/: CMakeLists.txt
src/armor_detector/include/armor_detector/: detector.h  inference.h  interface.h  parser.h  utils.h
src/armor_detector/src/: detector.cpp  inference.cpp  parser.cpp  utils.cpp
src/armor_tracker/: CMakeLists.txt
src/armor_tracker/include/armor_tracker/: extended_kalman_filter.h  tracker.h
src/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp
src/debug_toolkit/: CMakeLists.txt
src/debug_toolkit/include/debug_toolkit/: draw_package.h
src/debug_toolkit/src/: draw_package.cpp
src/detector/: CMakeLists.txt
src/detector/include/detector/: detector.h  inference.h  interface.h  parser.h  utils.h
src/detector/src/: detector.cpp  inference.cpp  parser.cpp  utils.cpp
src/extended_kalman_filter/: CMakeLists.txt
src/extended_kalman_filter/include/extended_kalman_filter/: extended_kalman_filter.h
src/extended_kalman_filter/src/: extended_kalman_filter.cpp
src/google_logger/: CMakeLists.txt
src/google_logger/include/google_logger/: google_logger.h
src/google_logger/src/: google_logger.cpp
src/macro_definition/: CMakeLists.txt
src/macro_definition/include/macro_definition/: macro_definition.h
src/plot_client_http/: CMakeLists.txt
src/plot_client_http/include/plot_client_http/: ekf_plot.h  plot_client_http.h  pnp_view.h  yaw_pitch_view.h
src/plot_client_http/src/: ekf_plot.cpp  plot_client_http.cpp  pnp_view.cpp  yaw_pitch_view.cpp
src/plot_server_http/: plot_server_http.py  test.py
src/plot_server_http/configure_logger/: __init__.py  log_configure.py
src/plot_server_http/custom_axes/: realtime_comparison.py  realtime_factory.py  realtime_interface.py  realtime_position.py  realtime_waveform.py
src/plot_server_http/plot/: real_time_comparison_image.py  realtime_comparison.py  realtime_factory.py  realtime_interface.py  realtime_position.py
src/plot_server_http/routes/: plot_reutes.py
src/plot_server_http/ui/: figure_canvas_ui.py  figure_ui.py  figure_uii.py  plot_ui.py
src/plot_server_http/units/: __init__.py
src/safe_container/: CMakeLists.txt
src/safe_container/include/safe_container/: safe_circular_buffer.h  safe_circular_queue.h  safe_stack.h  threadsafe_queue.h
src/serial/: CMakeLists.txt
src/serial/include/serial/: CRC.h  VCOMCOMM.h
src/serial/src/: CRC.cpp  VCOMCOMM.cpp
src/serial_port/: CMakeLists.txt
src/serial_port/include/serial_port/: VCOMCOMM.h  communicate_protocol.h
src/serial_port/include/serial_sort/: CRC.h  VCOMCOMM.h
src/serial_port/src/: CRC.cpp  VCOMCOMM.cpp
src/solver/: CMakeLists.txt
src/solver/include/solver/: ballistic_solver.h  coord_utils.h  coordinate_solver.h  pnp_solver.h  solver.h  solver_interface.h
src/solver/src/: ballistic_solver.cpp  coord_utils.cpp  coordinate_solver.cpp  pnp_solver.cpp  solver.cpp
src/spdlog_factory/: CMakeLists.txt
src/spdlog_factory/include/spdlog_factory/: BackTrace.h  QtCompatibilityLayer.h  spdUtil.h  spdlogger.h
src/spdlog_factory/src/: BackTrace.cpp  spdUtil.cpp  spdlogger.cpp
src/thread_pool/: CMakeLists.txt
src/thread_pool/include/thread_pool/: thread_pool.h
src/threadsafe_queue/: CMakeLists.txt
src/threadsafe_queue/include/threadsafe_queue/: threadsafe_queue.h
src/utils/: CMakeLists.txt
src/utils/include/utils/: utils.h
src/utils/src/: utils.cpp
src/view/: CMakeLists.txt
src/view/include/dynamic_chart_view/: dynamic_chart_view.h  dynamic_line_chart_view.h
src/view/include/view/: dynamic_chart_view.h  view.h
src/view/src/: dynamic_lin_chart_view.cpp  view.cpp
src/vision_debug_widgets/: CMakeLists.txt
src/vision_debug_widgets/include/vision_debug_widgets/: hsv_edit.h  slider.h  slider_widget.h
template/: create_window.json  update_data.json
test/: test_detector.cpp  test_extended_kalman_filter.cpp  test_google_logger.cpp  test_hik_dirver.cpp  test_main.cpp  test_safe_container.cpp  test_solver.cpp
test/test_utils/include/test_utils/: test_camera_start.h
